[workspace]
members = [
    "exospace-server",
    "exospace-client-terminal",
    "exospace-client-pixel",
    "exospace-client-neural",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
libnotcurses-sys = "3.11"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[package]
name = "exospace"
version.workspace = true
edition.workspace = true

[dependencies]
